# TelegramMCPVSCode

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  config.example.toml  deny.toml
crates/aliases/: Cargo.toml
crates/aliases/src/: lib.rs
crates/aliases/tests/: resolve.rs
crates/history/: Cargo.toml
crates/history/src/: error.rs  lib.rs  schema.rs  store.rs  types.rs
crates/history/tests/: messages.rs  migrations.rs  retention.rs  search.rs
crates/local-pipe/: Cargo.toml
crates/local-pipe/src/: auth.rs  discovery.rs  lib.rs  process.rs  security.rs  server.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: config.rs  error.rs  main.rs  tools_io.rs
crates/mcp-server/tests/: smoke.rs
crates/mcp-server/tests/common/: mod.rs
crates/tg-client/: Cargo.toml
crates/tg-client/src/: client.rs  error.rs  lib.rs
crates/tg-client/tests/: download.rs  send.rs  updates.rs
crates/tg-hook/: Cargo.toml
crates/tg-hook/src/: cli.rs  discovery.rs  lib.rs  local_input.rs  main.rs  mcp_client.rs  output.rs  poll.rs  question.rs  stop_input.rs  wake.rs
crates/tg-hook/tests/: cli_parse.rs  discovery_pick.rs  e2e.rs  stop_input_parse.rs
crates/tg-hook/tests/common/: mod.rs
crates/tg-updater/: Cargo.toml
crates/tg-updater/src/: error.rs  lib.rs  mapping.rs  polling.rs
crates/tg-updater/tests/: mapping.rs  polling.rs
docs/superpowers/plans/: 2026-05-13-telegram-mcp.md  2026-05-14-claude-code-stop-hook.md  2026-05-14-stop-hook.md  2026-05-14-telegram-stop-hook.md  2026-05-14-tg-hook.md
docs/superpowers/specs/: 2026-05-13-telegram-mcp-design.md
