[workspace]
resolver = "2"
members = [
    "crates/aliases",
    "crates/history",
    "crates/tg-client",
    "crates/tg-updater",
    "crates/mcp-server",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["TelegramMCP authors"]
rust-version = "1.85"
repository = "https://example.invalid/TelegramMCP"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# MCP
rmcp = { version = "0.2", features = ["server", "transport-io"] }

# Telegram Bot API
teloxide = { version = "0.13", default-features = false, features = ["native-tls", "ctrlc_handler"] }

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Serde / schemas
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
schemars = { version = "0.8", features = ["preserve_order"] }

# Errors
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"

# URL / HTTP
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Test infrastructure
wiremock = "0.6"
tempfile = "3"

# Internal crates
aliases = { path = "crates/aliases" }
history = { path = "crates/history" }
tg-client = { path = "crates/tg-client" }
tg-updater = { path = "crates/tg-updater" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
