[package]
name = "aliases"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
