[package]
name = "tg-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "tg_hook"
path = "src/lib.rs"

[[bin]]
name = "tg-hook"
path = "src/main.rs"

[dependencies]
local-pipe = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
history = { workspace = true }
uuid = { workspace = true }
local-pipe = { workspace = true }
tokio = { workspace = true }
